Agregar imagenes y mejora de errores

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PZ</title>
     <style>
-    body {
-        background-color: rgb(177, 119, 119);
-    }
-</style>
+        body {
+            background-color: rgb(133, 78, 78);
+        }
+        </style>
 </head>
 <body>
-<!-- Inicio de la pagina web -->
+    <!-- Inicio de la pagina web -->
     <h1> Project Zomboid <img src = "imagenes/inicio/PzLogo_Blood.png" alt = "logo pz" height="50px" style="vertical-align:-10px;"> </h1>
     <p><strong>Project Zomboid</strong> es un juego de supervivencia en un apocalipsis zombie realista, de mundo abierto. En este juego el jugador tiene que sobrevivir la mayor cantidad de tiempo mientras puede hacer muchas cosas que el juego nos brinda</p>
     
+    <img src = "imagenes/inicio/basePZ.jpg" alt = "ejemplo de base en el juego" height= "300px">
+
     <h2>Mecanicas del juego</h2>
     <ul>
         <strong>
@@ -44,7 +46,8 @@
                 <p>Se obtiene experiencia al hacer ejercicios de fuerza, cargar más del 50% la capacidad de carga, correr y golpear zombis con ataques cuerpo a cuerpo.</p>
             <li>Estado físico</li>
                 <p>Se obtiene experiencia al ejercitarse, golpear zombis con armas cuerpo a cuerpo mientras el jugador no este cansado.</p>
-        </ul>
+            </ul>
+            <img src = "imagenes/habilidades/fuerza.jpg" alt = "ejercicioPZ" height="150px">
         <li><strong>Agilidad</strong></li>
         <ul>
             <li>Carrera</li>
@@ -56,6 +59,7 @@
             <li>Sigilo</li>
                 <p>Afecta en el radio en el cual los zombies nos escuchan cuando estamos en modo siligo (agachados)</p>
         </ul>
+        <img src = "imagenes/habilidades/auto_PZ.jpeg" alt = "orda_zombies" height="150px">
         <li><strong>Combate</strong></li>
         <ul>
             <li>Hacha</li>
@@ -66,6 +70,7 @@
             <li>Lanza</li>
             <li>Mantenimiento</li>
         </ul>
+        <img src = "imagenes/habilidades/combate.jpg" alt = "combate" height="150px">
         <li><strong>Fabricación</strong></li>
         <ul>
             <li>Carpintería</li>
@@ -76,6 +81,7 @@
             <li>Sastreria</li>
             <li>Metalisteria</li>
         </ul>
+        <img src = "imagenes/habilidades/fabricacion.jpeg" alt = "fabricacion" height="150px">
         <li><strong>Armas de fuego</strong></li>
         <ul>
             <li>Puntería</li>
@@ -83,6 +89,7 @@
             <li>Recarga</li>
                 <p>Afecta a la velocidad de recarga y a las probabilidades de que se atazque el arma</p>
         </ul>
+        <img src = "imagenes/habilidades/armas.jpeg" alt = "armas" height="150px">
         <li><strong>Supervivencia</strong></li>
         <ul>
             <li>Pesca</li>
@@ -90,6 +97,7 @@
             <li>Trampas</li>
             <li>Agricultura</li>
         </ul>
+        <img src = "imagenes/habilidades/agricultura.jpeg" alt = "agricultura" height="150px">
 
     </ul>
 
