--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PZ</title>
     <style>
         body {
-            background-color: rgb(133, 78, 78);
+            background-color: rgb(133, 90, 90);
         }
         </style>
 </head>
@@ -22,8 +22,9 @@
     <h2>Mecanicas del juego</h2>
     <ul>
         <strong>
-        <li>Habilidades</li>
-        <li>Personaje</li>
+        <!--Nos lleva a la otra pagina-->
+        <li><a href="Paginas/habilidades.html">Habilidades</a></li>
+        <li><a href="Paginas/personaje.html">Personaje</a></li>
         <li><a href = "https://map.projectzomboid.com/">Mapa-Ciudades</a></li>
         <li>Modos de juego</li>
         </strong>
@@ -37,70 +38,6 @@
         <li><a href = "https://store.steampowered.com/app/108600/Project_Zomboid/?l=spanish">¿Donde descargarlo?</a></li>
         <li>Actualizaciones</li>
         </strong>
-    </ul>
-
-<!--Cuerpo de la pagina-->
-    <h3>Habilidades</h3>
-    <ul>
-        <li><strong>Pasivas</strong></li>
-        <ul>
-            <li>Fuerza</li>
-                <p>Se obtiene experiencia al hacer ejercicios de fuerza, cargar más del 50% la capacidad de carga, correr y golpear zombis con ataques cuerpo a cuerpo.</p>
-            <li>Estado físico</li>
-                <p>Se obtiene experiencia al ejercitarse, golpear zombis con armas cuerpo a cuerpo mientras el jugador no este cansado.</p>
-            </ul>
-            <img src = "imagenes/habilidades/fuerza.jpg" alt = "ejercicioPZ" height="150px">
-        <li><strong>Agilidad</strong></li>
-        <ul>
-            <li>Carrera</li>
-                <p>Permite que el jugador pueda correr mas rapido y que consuma menos energia</p>
-            <li>Pies ligeros</li>
-                <p>Controla el sonido de nuestros pasos y por ende el radio en el que los zombies nos escuchan</p>
-            <li>Destreza</li>
-                <p>Controla la velocidad en la que el personaje se mueve cuando estamos en posición de combate</p>
-            <li>Sigilo</li>
-                <p>Afecta en el radio en el cual los zombies nos escuchan cuando estamos en modo siligo (agachados)</p>
-        </ul>
-        <img src = "imagenes/habilidades/auto_PZ.jpeg" alt = "orda_zombies" height="150px">
-        <li><strong>Combate</strong></li>
-        <ul>
-            <li>Hacha</li>
-            <li>Contundente larga</li>
-            <li>Contundente corta</li>
-            <li>Hoja larga</li>
-            <li>Hoja corta</li>
-            <li>Lanza</li>
-            <li>Mantenimiento</li>
-        </ul>
-        <img src = "imagenes/habilidades/combate.jpg" alt = "combate" height="150px">
-        <li><strong>Fabricación</strong></li>
-        <ul>
-            <li>Carpintería</li>
-            <li>Cocinar</li>
-            <li>Electrónica</li>
-            <li>Metalisteria</li>
-            <li>Mecánica</li>
-            <li>Sastreria</li>
-            <li>Metalisteria</li>
-        </ul>
-        <img src = "imagenes/habilidades/fabricacion.jpeg" alt = "fabricacion" height="150px">
-        <li><strong>Armas de fuego</strong></li>
-        <ul>
-            <li>Puntería</li>
-                <p>Esta habilidad controla bastantes cosas, tales como la precicion al disparar, alcance, exactitud y el tiempo de apuntado</p>
-            <li>Recarga</li>
-                <p>Afecta a la velocidad de recarga y a las probabilidades de que se atazque el arma</p>
-        </ul>
-        <img src = "imagenes/habilidades/armas.jpeg" alt = "armas" height="150px">
-        <li><strong>Supervivencia</strong></li>
-        <ul>
-            <li>Pesca</li>
-            <li>Rebuscar</li>
-            <li>Trampas</li>
-            <li>Agricultura</li>
-        </ul>
-        <img src = "imagenes/habilidades/agricultura.jpeg" alt = "agricultura" height="150px">
-
     </ul>
 
     <hr>
