--- a/Paginas/habilidades.html
+++ b/Paginas/habilidades.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habilidades PZ</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/listas.css">
 </head>
 <body>
-    <h1>Habilidades</h1>
+    <hr>
+    <header>
+        <h1 class="titulo">Habilidades</h1>
+    </header>
     <!--Agregamos una forma de volver a la pagina anterior de una mejor manera-->
-    <a href="../index.html">--Volver--</a>
+    <nav>
+        <a href="../index.html">--Volver--</a>
+    </nav>
+    <hr>
     <ul>
         <!--Agregamos las distintas habilidades del juego con una imagen referencial-->
-        <li><strong>Pasivas</strong></li>
+        <li class="sublista1"><strong>Pasivas</strong></li>
         <ul>
             <li>Fuerza</li>
                 <p>Se obtiene experiencia al hacer ejercicios de fuerza, cargar más del 50% la capacidad de carga, correr y golpear zombis con ataques cuerpo a cuerpo.</p>
             <li>Estado físico</li>
                 <p>Se obtiene experiencia al ejercitarse, golpear zombis con armas cuerpo a cuerpo mientras el jugador no este cansado.</p>
-            </ul>
-            <img src = "../imagenes/habilidades/fuerza.jpg" alt = "ejercicioPZ" height="150px">
-        <li><strong>Agilidad</strong></li>
+        </ul>
+        <img src = "../imagenes/habilidades/fuerza.jpg" alt = "ejercicioPZ" height="150px">
+        <hr>
+
+        <li class="sublista1"><strong>Agilidad</strong></li>
         <ul>
             <li>Carrera</li>
                 <p>Permite que el jugador pueda correr mas rapido y que consuma menos energia</p>
@@ -31,7 +41,9 @@
                 <p>Afecta en el radio en el cual los zombies nos escuchan cuando estamos en modo siligo (agachados)</p>
         </ul>
         <img src = "../imagenes/habilidades/auto_PZ.jpeg" alt = "orda_zombies" height="150px">
-        <li><strong>Combate</strong></li>
+        <hr>
+
+        <li class="sublista1"><strong>Combate</strong></li>
         <ul>
             <li>Hacha</li>
             <li>Contundente larga</li>
@@ -42,7 +54,9 @@
             <li>Mantenimiento</li>
         </ul>
         <img src = "../imagenes/habilidades/combate.jpg" alt = "combate" height="150px">
-        <li><strong>Fabricación</strong></li>
+        <hr>
+
+        <li class="sublista1"><strong>Fabricación</strong></li>
         <ul>
             <li>Carpintería</li>
             <li>Cocinar</li>
@@ -53,7 +67,9 @@
             <li>Metalisteria</li>
         </ul>
         <img src = "../imagenes/habilidades/fabricacion.jpeg" alt = "fabricacion" height="150px">
-        <li><strong>Armas de fuego</strong></li>
+        <hr>
+
+        <li class="sublista1"><strong>Armas de fuego</strong></li>
         <ul>
             <li>Puntería</li>
                 <p>Esta habilidad controla bastantes cosas, tales como la precicion al disparar, alcance, exactitud y el tiempo de apuntado</p>
@@ -61,7 +77,9 @@
                 <p>Afecta a la velocidad de recarga y a las probabilidades de que se atazque el arma</p>
         </ul>
         <img src = "../imagenes/habilidades/armas.jpeg" alt = "armas" height="150px">
-        <li><strong>Supervivencia</strong></li>
+        <hr>
+
+        <li class="sublista1"><strong>Supervivencia</strong></li>
         <ul>
             <li>Pesca</li>
             <li>Rebuscar</li>
@@ -69,6 +87,7 @@
             <li>Agricultura</li>
         </ul>
         <img src = "../imagenes/habilidades/agricultura.jpeg" alt = "agricultura" height="150px">
+        <hr>
 
     </ul>
 
