--- a/Paginas/personaje.html
+++ b/Paginas/personaje.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personaje PZ</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/listas.css">
 </head>
 <body>
-    <h1>Personaje</h1>
+    <hr>
+    <header>
+        <h1 class="titulo">Personaje</h1>
+        <img src="../imagenes/personaje/Player.png" alt="ejm personaje" width="250">
+    </header>
     <!--Agregamos una forma de volver a la pagina anterior de una mejor manera-->
-    <a href="../index.html">--Volver--</a>
-    <br>
-    <img src="../imagenes/personaje/Player.png" alt="ejm personaje" width="250">
-    <h2>Creacion de personaje</h2>
+    <nav>
+        <a href="../index.html">--Volver--</a>
+    </nav>
+    <hr>
+
+    <h2 class="titulo">Creacion de personaje</h2>
     <ol>
-        <li><strong>Ubicacion inicial</strong></li>
+        <li class="sublista1"><strong>Ubicacion inicial</strong></li>
         <p>En este apartado nosotros elejimos la ciudad donde queremos aparecer</p>
         <img src="../imagenes/personaje/mapa_inicio.png" alt="mapa inicio" width="1000px">
-        <li><strong>Rasgos</strong></li>
+        <hr>
+
+        <li class="sublista1"><strong>Rasgos</strong></li>
         <p>Seguidamente podemos escoger las estadisticas les personaje, tales como:</p>
         <ul>
             <li>Profecion</li>
@@ -24,7 +34,9 @@
             <li>Rasgos positivos</li>
         </ul>
         <img src="../imagenes/personaje/Rasgos.jpeg" alt="Rasgos pantalla" width="1000px">
-        <li><strong>Construccion del personaje</strong></li>
+        <hr>
+
+        <li class="sublista1"><strong>Construccion del personaje</strong></li>
         <p>Despues de haber realizado los anteriores pasos, podremos escoger las siguientes caracteristicas de nuestro personaje</p>
         <ul>
             <li>Apariencia</li>
@@ -35,6 +47,7 @@
         </ul>
         <p>Tambien podremos escoger la opcion "Aleatorio" para que el propio juego escoja estas caracteristicas aleatoriamente</p>
         <img src="../imagenes/personaje/Caracteristicas.jpg" alt="caracteristicas del personaje" width="1000px">
+        <hr>
     </ol>
 </body>
 </html>
