--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>
             <strong>Project Zomboid</strong> es un juego de supervivencia en un apocalipsis zombie realista, de mundo abierto. 
             En este juego el jugador tiene que sobrevivir la mayor cantidad de tiempo mientras puede hacer muchas cosas 
-            que el juego nos brinda
+            que el juego nos brinda.
         </p>
         
         <img src = "imagenes/inicio/basePZ.jpg" alt = "ejemplo de base en el juego" height= "300px">
@@ -48,7 +48,35 @@
             </strong>
         </ul>
     </nav>
+    <hr>
+
+    <main>
+        <h3 class="centrado">Jugabilidad</h3>
+        <p>
+            En Project Zomboid, el jugador tiene como objetivo sobrevivir el mayor tiempo posible en un área apocalíptica 
+            y plagada de zombis alrededor de la ciudad de Louisville, Kentucky, conocida como 'Knox Country', que ha sido 
+            puesta en cuarentena por el gobierno.El jugador puede elegir la apariencia, la ocupación y los rasgos de 
+            su personaje no sin antes, seleccionar donde aparecer dentro de una de las cuatro ciudades iniciales. Los 
+            rasgos (ya sean positivos o negativos) afectan los puntos de experiencia iniciales en cierta habilidad, 
+            otorgan recetas únicas, dan un impulso de ganancia de experiencia, afectan el radio de percepción o el 
+            Rebuscar. El tipo de rasgo que se elige también influirá en dónde aparecerá exactamente el personaje (por 
+            ejemplo, un bombero tiene más posibilidades de aparecer en parque de bomberos si la localidad escogida 
+            dispone de uno). Además de evitar a los zombis, el jugador debe gestionar sus necesidades personales (como el 
+            hambre, el estrés, la fatiga y el aburrimiento) para mantenerse con vida descansando, buscando suministros 
+            y utilizando técnicas de supervivencia. El jugador puede nivelar sus habilidades a través de actividades y 
+            revistas de habilidades mediante un sistema de experiencia. La ganancia de experiencia puede ser multiplicada 
+            leyendo libros, cada uno para un respectivo tipo de habilidad y nivel. El videojuego utiliza los zombis de 
+            movimiento lento al estilo tradicional de Romero, aunque algunos zombis son más rápidos que otros, y el modo 
+            sandbox incluye una configuración para zombis "velocistas" al estilo 28 Days Later.
+            <br>
+            El videojuego presenta una variedad de modos de dificultad preestablecidos, junto con un modo sandbox, que le 
+            permite al jugador personalizar la configuración de su partida, como la población de zombis, la transmisibilidad 
+            de virus, la rareza del botín, regularidad de eventos, aparición de autos, entre otros.
+        </p>
+        <img class="centrado" src="imagenes/inicio/baner.jpg" alt="banerPZ" width="600px">
+    </main>
 
     <hr>
+    <br>
 </body>
 </html>
