nav-bar segunda mejora (dimenciones y escabilidad)

--- a/index.html
+++ b/index.html
@@ -13,11 +13,26 @@
     <!-- Inicio de la pagina web -->
     <div class="navegador">
         <ul class="navegador__ul">
-            <li class="navegador__item"><img class="navegador__imagen" src = "imagenes/inicio/PzLogo_Blood.png" alt = "logo pz"></li>
-            <li class="navegador__item"><a href="#mecanicas" class="navegador__link">Mecanicas</a></li>
-            <li class="navegador__item"><a href="#extras" class="navegador__link">Extras</a></li>
-            <li class="navegador__item"><a href="" class="navegador__link">Actualizaciones</a></li>
-            <li class="navegador__item"><a href="" class="navegador__link link--inicioSesion">Inicio sesion</a></li>
+            <li class="navegador__item navegador__item--logo">
+                <a href="index.html" class="navegador__logo-link">
+                    <img class="navegador__imagen" src = "imagenes/inicio/PzLogo_Blood.png" alt = "logo pz">
+                </a>
+            </li>
+            <li class="navegador__item">
+                <a href="#mecanicas" class="navegador__link">Mecanicas</a>
+            </li>
+            <li class="navegador__item">
+                <a href="#extras" class="navegador__link">Extras</a>
+            </li>
+            <li class="navegador__item">
+                <a href="" class="navegador__link">Actualizaciones</a>
+            </li>
+
+            <li class="navegador__item navegador__item--espaciador"></li>
+
+            <li class="navegador__item">
+                <a href="Paginas/inicio_sesion.html" class="navegador__link link--login">Inicio sesion</a>
+            </li>
         </ul>
     </div>
     
@@ -36,8 +51,6 @@
 
 
     <nav>
-        <p>Registrarse: <a href="Paginas/inicio_sesion.html">Aqui</a></p>
-        <hr>
         <h2 id="mecanicas">Mecanicas del juego</h2>
         <ul>
             <strong>
