--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <ul class="navegador__ul">
             <li class="navegador__item navegador__item--logo">
                 <a href="index.html" class="navegador__logo-link">
-                    <img class="navegador__imagen" src = "imagenes/inicio/PzLogo_Blood.png" alt = "logo pz">
+                    <img class="navegador__imagen" src = "imagenes/inicio/PzLogo_Blood.png" alt = "logo pz" rel="noopener noreferrer">
                 </a>
             </li>
             <li class="navegador__item">
-                <a href="#mecanicas" class="navegador__link">Mecanicas</a>
+                <a href="#mecanicas" class="navegador__link">Mecanicas del juego</a>
             </li>
             <li class="navegador__item">
                 <a href="#extras" class="navegador__link">Extras</a>
             </li>
             <li class="navegador__item">
-                <a href="" class="navegador__link">Actualizaciones</a>
+                <a href="https://map.projectzomboid.com/" target="_blank" class="navegador__link">Mapa completo</a>
             </li>
 
             <li class="navegador__item navegador__item--espaciador"></li>
