nav-bar cuarta mejora (mover al main.css y efectos :hover)

--- a/Paginas/personaje.html
+++ b/Paginas/personaje.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="../css/listas.css">
 </head>
 <body>
+    <!-- Barra de navegacion -->
+    <div class="navegador">
+        <ul class="navegador__ul">
+            <li class="navegador__item navegador__item--logo">
+                <a href="index.html" class="navegador__logo-link">
+                    <img class="navegador__imagen" src = "../imagenes/inicio/PzLogo_Blood.png" alt = "logo pz" rel="noopener noreferrer">
+                </a>
+            </li>
+            <li class="navegador__item">
+                <a href="#mecanicas" class="navegador__link">Mecanicas del juego</a>
+            </li>
+            <li class="navegador__item">
+                <a href="#extras" class="navegador__link">Extras</a>
+            </li>
+            <li class="navegador__item">
+                <a href="https://map.projectzomboid.com/" target="_blank" class="navegador__link">Mapa completo</a>
+            </li>
+
+            <li class="navegador__item navegador__item--espaciador"></li>
+
+            <li class="navegador__item">
+                <a href="Paginas/inicio_sesion.html" class="navegador__link link--login">Inicio sesion</a>
+            </li>
+        </ul>
+    </div>
+
     <hr>
     <header>
         <h1 class="titulo">Personaje</h1>
