--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <!-- Inicio de la pagina web -->
+    <!-- Barra de navegacion -->
     <div class="navegador">
         <ul class="navegador__ul">
             <li class="navegador__item navegador__item--logo">
@@ -35,6 +35,8 @@
             </li>
         </ul>
     </div>
+
+    <!-- Banner principal -->
     
     <header>
         <h1 class="titulo"> Project Zomboid </h1>
