Primer avance, titulo principal (imagen de fondo y titulo)

--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
     </div>
 
     <!-- Banner principal -->
-    
-    <header>
-        <h1 class="titulo"> Project Zomboid </h1>
+    <div class="tituloPrincipal">
+        <div class="tituloPrincipal__titulo">
+            <img class="tituloPrincipal__imagenLogo" src = "imagenes/inicio/PzLogo_Blood.png" alt = "logo pz" rel="noopener noreferrer">
+        </div>
+    </div>
+
+    <!--
+        <div class="imagenPrincipal">
+            <img class="imagen" src = "imagenes/inicio/basePZ.jpg" alt = "ejemplo de base en el juego" height= "300px">
+        </div>
         <p>
             <strong>Project Zomboid</strong> es un juego de supervivencia en un apocalipsis zombie realista, de mundo abierto. 
             En este juego el jugador tiene que sobrevivir la mayor cantidad de tiempo mientras puede hacer muchas cosas 
             que el juego nos brinda.
         </p>
-        <div class="imagenPrincipal">
-            <img class="imagen" src = "imagenes/inicio/basePZ.jpg" alt = "ejemplo de base en el juego" height= "300px">
-        </div>
-
-    </header>
+    -->
 
 
     <nav>
