terminar apartados del index.html (aun falta todos los links)

--- a/Paginas/personaje.html
+++ b/Paginas/personaje.html
@@ -12,15 +12,15 @@
     <div class="navegador">
         <ul class="navegador__ul">
             <li class="navegador__item navegador__item--logo">
-                <a href="index.html" class="navegador__logo-link">
+                <a href="../index.html" class="navegador__logo-link">
                     <img class="navegador__imagen" src = "../imagenes/inicio/PzLogo_Blood.png" alt = "logo pz" rel="noopener noreferrer">
                 </a>
             </li>
             <li class="navegador__item">
-                <a href="#mecanicas" class="navegador__link">Mecanicas del juego</a>
+                <a href="habilidades.html" class="navegador__link">Habilidades</a>
             </li>
             <li class="navegador__item">
-                <a href="#extras" class="navegador__link">Extras</a>
+                <a href="personaje.html" class="navegador__link">Personaje</a>
             </li>
             <li class="navegador__item">
                 <a href="https://map.projectzomboid.com/" target="_blank" class="navegador__link">Mapa completo</a>
@@ -29,7 +29,7 @@
             <li class="navegador__item navegador__item--espaciador"></li>
 
             <li class="navegador__item">
-                <a href="Paginas/inicio_sesion.html" class="navegador__link link--login">Inicio sesion</a>
+                <a href="inicio_sesion.html" class="navegador__link link--login">Inicio sesion</a>
             </li>
         </ul>
     </div>
@@ -75,5 +75,11 @@
         <img src="../imagenes/personaje/Caracteristicas.jpg" alt="caracteristicas del personaje" width="800px">
         <hr>
     </ol>
+    
+    <footer class="footer-pagina">
+        <p>Github: <a href="https://github.com/dachiri-unsa/TrabajoIDWEB">Aqui</a></p>
+        <p>Autor: Achiri Cuevas, Daniel Cooper</p>
+        <p>2025</p>
+    </footer>
 </body>
 </html>
