--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li class="navegador__item navegador__item--espaciador"></li>
 
             <li class="navegador__item">
+                <a href="Paginas/registrarse.html" class="navegador__link link--login">Registrarse</a>
+            </li>
+            <li class="navegador__item">
                 <a href="Paginas/inicio_sesion.html" class="navegador__link link--login">Inicio sesion</a>
             </li>
         </ul>
