--- a/Paginas/personaje.html
+++ b/Paginas/personaje.html
@@ -31,6 +31,9 @@
             <li class="navegador__item navegador__item--espaciador"></li>
 
             <li class="navegador__item">
+                <a href="registrarse.html" class="navegador__link link--login">Registrarse</a>
+            </li>
+            <li class="navegador__item">
                 <a href="inicio_sesion.html" class="navegador__link link--login">Inicio sesion</a>
             </li>
         </ul>
